Fixed display size problem on Firefox.

--- a/static/styles/egm.css
+++ b/static/styles/egm.css
@@ -1,5 +1,11 @@
+html {
+  height: 100%;
+}
+
+
 body {
   margin: 0;
+  height: 100%;
 }
 
 
